--- a/playground/boost-graph/graphviz/Makefile
+++ b/playground/boost-graph/graphviz/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ -Wall -std=c++11 Main-Graphviz.cpp -lboost_graph
+	g++ -Wall -std=c++11 ParsePrint.cpp -lboost_graph
 
 clean:
 	rm -rf *~ *.o a.out
