refactored boost graph example to use ranges and range based for loops instead of std::for_each.

--- a/playground/boost-graph/graphviz/Makefile
+++ b/playground/boost-graph/graphviz/Makefile
@@ -1,5 +1,5 @@
 all:
-	g++ -Wall -std=c++11 ParsePrint.cpp -lboost_graph
+	clang++ -Wall -std=c++11 ParsePrint.cpp -lboost_graph
 
 clean:
 	rm -rf *~ *.o a.out
